--- a/templates/aboutusnew.html
+++ b/templates/aboutusnew.html
@@ -54,11 +54,11 @@
                 <div class="card mb-4">
             
                     <div class="card">
-                        <img style="max-height: 200px;" src="{{ url_for('static',filename = 'image/Deepak Moud.jpg')  }}"
+                        <img style="max-height: 200px;" src="{{ url_for('static',filename = 'image/muhammed.jpeg')  }}"
                             class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title"; style="text-align:center">Developer</h5>
-                            <p class="card-text"; style="text-align:justify">Deepak Moud, Assistant Professor, Department of Computer Engineering, PIET</p>
+                            <p class="card-text"; style="text-align:justify">MUHAMMED FAIEZ BHATI, Department of Computer Engineering, PIET</p>
             
                             
                         </div>
@@ -76,7 +76,7 @@
                             class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title"; style="text-align:center">Designer</h5>
-                            <p class="card-text"; style="text-align:justify">Pritesh Kumar, PIET18CS108, Department of Computer Engineering, PIET</p>
+                            <p class="card-text"; style="text-align:justify">MUHAMMED FAIEZ BHATI, PIET19CS100, Department of Computer Engineering, PIET</p>
 
                             
                         </div>
